misc/openbao/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openbao-ingress
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: "vault-issuer"
    cert-manager.io/common-name: "vault.hk.home"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - vault.hk.home
      secretName: vault-cert
  rules:
    - host: vault.hk.home
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openbao
                port:
                  number: 8200
